--- a/style.css
+++ b/style.css
@@ -1,5 +1,56 @@
 body {
 	display: flex;
-	background-color: blue;
-	
+	background-color: black;
+	color: seashell;
+	font-size: 22px;
+	font-family: Helvetica;
+	opacity: 0.9;
+}
+
+
+
+.nav {
+	display: flex;
+
+
+
+}
+
+.nav ul, li {
+	display: inline-flex;
+	justify-content: flex-end;
+	color: seashell;
+
+}
+
+.nav li {
+	padding-left: 20px;
+}
+
+
+header {
+	display: inline-flex;
+	position: fixed;
+	width: 100%;
+	height: 69px;
+	border-bottom: 1px solid seashell;
+	justify-content: space-between;
+}
+
+
+.logo {
+	display: flex;
+
+}
+
+.logo img {
+	height: 50px;
+	margin-left: 10px;
+	margin: auto 0 auto 10px;
+}
+
+main {
+
+	margin-top: 69px;
+
 }
